crates/ic-lint/tests/snapshots/unknown_annotation__no_suggestion_for_unrelated.snap
---
source: crates/ic-lint/tests/unknown_annotation.rs
assertion_line: 220
expression: output
---
warning[unknown-annotation]: unknown annotation `completely_unrelated_name`
   ┌ test.idl:3:14
   │
 2 │         struct TestStruct {
 3 │             @completely_unrelated_name
   ·              ^^^^^^^^^^^^^^^^^^^^^^^^^ annotation not found
 4 │             long field;
 5 │         };
   └──
