crates/ic-lint/tests/snapshots/unknown_annotation__typo_suggestion_optional.snap
---
source: crates/ic-lint/tests/unknown_annotation.rs
expression: output
---
! unknown-ann: unknown annotation `optoinal`
  @ test.idl:3:14

 2 │ struct TestStruct {
 3 │     @optoinal
   │      ˆˆˆˆˆˆˆˆ annotation not found
 4 │     long field;
 5 │ };

  ? did you mean `@optional`?
