crates/ic-lint/tests/snapshots/unknown_annotation__unknown_annotation_in_module.snap
---
source: crates/ic-lint/tests/unknown_annotation.rs
expression: output
---
warning[unknown-annotation]: unknown annotation `UnknownModule`
   ┌ test.idl:2:10
   │
 2 │         @UnknownModule
   ·          ^^^^^^^^^^^^^ annotation not found
 3 │         module TestModule {
 4 │             @UnknownInner
   └──

warning[unknown-annotation]: unknown annotation `UnknownInner`
   ┌ test.idl:4:14
   │
 2 │         @UnknownModule
 3 │         module TestModule {
 4 │             @UnknownInner
   ·              ^^^^^^^^^^^^ annotation not found
 5 │             struct InnerStruct {
 6 │                 long value;
   └──

warning[unknown-annotation]: unknown annotation `UnknownEnum`
    ┌ test.idl:9:14
    │
  6 │                 long value;
  7 │             };
  8 │ 
  9 │             @UnknownEnum
    ·              ^^^^^^^^^^^ annotation not found
 10 │             enum Status {
 11 │                 @UnknownEnumerator
    └──
