crates/ic-lint/tests/snapshots/unknown_annotation__unknown_annotation_on_exception.snap
---
source: crates/ic-lint/tests/unknown_annotation.rs
expression: output
---
warning[unknown-annotation]: unknown annotation `UnknownException`
   ┌ test.idl:2:10
   │
 2 │         @UnknownException
   ·          ^^^^^^^^^^^^^^^^ annotation not found
 3 │         exception TestError {
 4 │             @UnknownMember
   └──

warning[unknown-annotation]: unknown annotation `UnknownMember`
   ┌ test.idl:4:14
   │
 2 │         @UnknownException
 3 │         exception TestError {
 4 │             @UnknownMember
   ·              ^^^^^^^^^^^^^ annotation not found
 5 │             string message;
 6 │             long code;
   └──
