crates/ic-lint/tests/snapshots/unknown_annotation__unknown_annotation_on_interface.snap
---
source: crates/ic-lint/tests/unknown_annotation.rs
expression: output
---
warning[unknown-annotation]: unknown annotation `NonExistent`
   ┌ test.idl:2:10
   │
 2 │         @NonExistent
   ·          ^^^^^^^^^^^ annotation not found
 3 │         interface TestInterface {
 4 │             void doSomething();
   └──
