crates/ic-lint/tests/snapshots/unknown_annotation__unknown_annotation_on_union.snap
---
source: crates/ic-lint/tests/unknown_annotation.rs
expression: output
---
warning[unknown-ann]: unknown annotation `UnknownUnion`
   ┌ test.idl:2:10
   │
 2 │         @UnknownUnion
   ·          ^^^^^^^^^^^^ annotation not found
 3 │         union TestUnion switch (long) {
 4 │             case 0:
   └──

warning[unknown-ann]: unknown annotation `UnknownVariant`
   ┌ test.idl:5:18
   │
 3 │         union TestUnion switch (long) {
 4 │             case 0:
 5 │                 @UnknownVariant
   ·                  ^^^^^^^^^^^^^^ annotation not found
 6 │                 string text;
 7 │             case 1:
   └──

warning[unknown-ann]: unknown annotation `AnotherUnknown`
    ┌ test.idl:8:18
    │
  6 │                 string text;
  7 │             case 1:
  8 │                 @AnotherUnknown
    ·                  ^^^^^^^^^^^^^^ annotation not found
  9 │                 long number;
 10 │             default:
    └──
